# Trobos_ai

./: Cargo.toml  README.md
src/: main.rs  types.rs
src/tools/: mod.rs  portfolio.rs
src/zapper/: client.rs  mod.rs  types.rs
