[package]
name = "rig-portfolio-analyzer-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
thiserror = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0" 
prettytable-rs = "0.10"